# Uptime-Monitor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  INSTALL.md  MIGRATION_GUIDE_UK.md  NOTIFICATION_TROUBLESHOOTING_UK.md  QUICKSTART.md  QUICKSTART_UK.md  README.md  README_UK.md  UPDATE_PRODUCTION.md  check-notifications.sh  deploy_update.sh  docker-compose.yml  generate-gpg-key.sh  install.sh  pyproject.toml  test_smoke.sh  ui_templates_new.py
.github/workflows/: ci.yml  pr-checks.yml  release.yml
Uptime_Robot/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  INSTALL_README.txt  PRODUCTION.md  README.md  README_SECURITY.md  __init__.py  auth_cli.py  auth_module.py  build_exe.bat  config_manager.py  create_task.ps1  create_task_simple.ps1  credentials.txt  crypto_utils.py  csrf.py  database.py  default_sites.json  dependencies.py  http_client.py  install.bat  install_service.bat  logger.py  main.py  main_service.py  metrics_store.py  models.py  monitoring.py  notifications.py  reporting.py  requirements-linux.txt  requirements.txt  ssl_checker.py  state.py  telegram_bot.py  tests.py  ui_templates.py  worker.py
Uptime_Robot/.github/workflows/: release.yml
Uptime_Robot/apt-repo/: README.md
Uptime_Robot/debian/: control  postinst  uptime-monitor.service
Uptime_Robot/monitoring/: __init__.py  alerting.py  maintenance.py
Uptime_Robot/routers/: api.py  auth.py  ui.py
Uptime_Robot/scripts/: backup-rotation.sh  bump_version.py  config-manager.py  config-rollback.sh  generate_changelog.py  restore-system.sh
Uptime_Robot/src/: __init__.py  __version__.py
Uptime_Robot/static/: app.css  i18n.js  manifest.json  sw.js
Uptime_Robot/templates/: base.html  change_password.html  dashboard.html  forgot_password.html  login.html  public_status.html  sla_report_pdf.html  users.html
Uptime_Robot/templates/partials/: monitor_card.html  notification_cards.html
Uptime_Robot/wss/: manager.py
dashboards/: grafana-uptime-monitor.json
docs/: ADMIN_GUIDE.md  ALERT_POLICY_UK.md  API.md  COMMANDS.md  INSTALL_AND_UPDATE.md  MIGRATION.md  QUICKSTART.md  README.md  SAFE_UPDATE_RUNBOOK.md  TROUBLESHOOTING.md  TROUBLESHOOTING_EN.md  UPDATE_CHANGES.md  UPDATE_COMPLETE_GUIDE.md  UPDATE_FIXES.md  UPDATE_INSTRUCTIONS.md  UPDATE_INSTRUCTIONS_UK.md  UPDATE_QUICKSTART.md  UPDATE_README.md  UPDATE_SCRIPT_FAST.sh  UPDATE_SCRIPT_SAFE.sh  WIX_INSTALLER_GUIDE.md  migrate.sh
examples/: api_examples.py
installer/: .gitignore  CREATE_RELEASE.md  QUICKSTART.md  README.md  build_msi.bat  product.wxs
tests/: test_advanced.py  test_api.py  test_api_integration.py  test_auth_unit.py  test_crypto_utils.py  test_db_seeding.py  test_monitoring.py  test_notifications.py  test_telegram_bot.py
