[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uptime-monitor"
version = "2.0.0"
description = "Enterprise Uptime Monitoring with Backup & SSL"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Uptime Monitor Team", email = "admin@example.com"}
]
keywords = [
    "monitoring",
    "uptime",
    "server",
    "ssl",
    "alerts",
    "fastapi",
    "python"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
windows = [
    "pywin32>=306",
]
all = [
    "uptime-monitor[dev,windows]",
]

[project.urls]
Homepage = "https://github.com/ajjs1ajjs/Uptime-Monitor"
Documentation = "https://github.com/ajjs1ajjs/Uptime-Monitor/tree/main/docs"
Repository = "https://github.com/ajjs1ajjs/Uptime-Monitor.git"
Issues = "https://github.com/ajjs1ajjs/Uptime-Monitor/issues"
Changelog = "https://github.com/ajjs1ajjs/Uptime-Monitor/blob/main/CHANGELOG.md"

[project.scripts]
uptime-monitor = "Uptime_Robot.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["Uptime_Robot*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.json", "*.yml", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "bcrypt",
    "win32serviceutil",
    "win32service",
    "win32con",
    "win32event",
    "servicemanager",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=Uptime_Robot --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_functions = [
    "test_*",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["Uptime_Robot"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
